<resources>
    <string name="app_name">TODO</string>
    <string name="str_main_title">标题</string>
    <string name="str_test">TEST</string>
    <string name="str_user_project">用户项目</string>
    <string name="label_task_content">任务内容:</string>
    <string name="label_remind_me">提醒我</string>
    <string name="title_btn_ok">完成</string>
    <string name="title_btn_cancel">取消</string>
    <string name="str_reminder_divider_between_time_and_date">\@</string>
    <string name="image_button">image button</string>
    <string name="label_project_setting">项目设置</string>
    <string name="label_project_setting_finish">完成设置</string>
    <string name="label_project_name">项目名称</string>
    <string name="label_project_color">项目颜色</string>
    <string name="title_delete_project">删除项目</string>
    <string name="title_menu_edit">修改</string>
    <string name="title_menu_delete">删除</string>
    <string name="title_menu_showalltasks">显示已完成任务</string>
    <string name="title_menu_rank">排序</string>
    <string name="title_menu_project_setting">项目设置</string>
    <string name="title_menu_preferences">首选项</string>
    <string name="label_task_finished">已完成</string>
    <string name="title_btn_login">登录</string>
	<string name="preference_label_ip_and_port">IP地址 : 端口</string>
    <string name="preference_title_onlineMode">在线模式</string>
	<string name="string_unfinished">未完成，敬请期待</string>
	<string name="title_menu_select_all">全选</string>
</resources>
