<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFeatures.ProjectSettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pro_setting_label_proName"
            android:text="@string/label_project_name"
            android:layout_marginStart="@dimen/distance_pro_setting_margin"
            android:layout_marginTop="@dimen/distance_pro_setting_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/pro_setting_et_proName"
            android:layout_below="@id/pro_setting_label_proName"
            android:layout_marginStart="@dimen/distance_pro_setting_margin"
            android:layout_marginEnd="@dimen/distance_pro_setting_margin"
            android:layout_marginTop="@dimen/distance_pro_setting_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/pro_setting_label_proColor"
            android:text="@string/label_project_color"
            android:layout_below="@id/pro_setting_et_proName"
            android:layout_marginStart="@dimen/distance_pro_setting_margin"
            android:layout_marginTop="@dimen/distance_pro_setting_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/pro_setting_btn_cancel"
            android:text="@string/title_btn_cancel"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/distance_pro_setting_margin"
            android:layout_marginBottom="@dimen/distance_pro_setting_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.alvkeke.tools.todo.Compoents.ColorSelector
            android:id="@+id/pro_setting_color_selector"
            android:layout_below="@id/pro_setting_label_proColor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/distance_pro_setting_margin"
            android:background="@color/testColor"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/pro_setting_btn_ok"
            android:text="@string/title_btn_ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/distance_pro_setting_margin"
            android:layout_marginBottom="@dimen/distance_pro_setting_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>